# scriba

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-19-scriba-implementation.md
docs/superpowers/specs/: 2026-03-19-scriba-design.md
plugin/: .mcp.json  plugin.json
plugin/skills/: transcribe.md
src/scriba/: __init__.py  cli.py  config.py  contracts.py  errors.py  formatting.py
src/scriba/backends/: __init__.py  base.py  mlx_whisper.py  openai_stt.py  whisperx.py
src/scriba/mcp/: __init__.py  server.py
src/scriba/media/: __init__.py  ingest.py  subtitle.py
src/scriba/output/: __init__.py  formatter.py
src/scriba/router/: __init__.py  constraints.py  cost_model.py  engine.py
src/scriba/secrets/: __init__.py  env.py  keychain.py  provider.py
tests/: conftest.py  test_cli.py  test_config.py  test_constraints.py  test_contracts.py  test_cost_model.py  test_errors.py  test_formatter.py  test_formatting.py  test_ingest.py  test_router.py  test_secrets.py  test_subtitle.py
tests/test_backends/: test_mlx.py  test_openai.py  test_whisperx.py
tests/test_mcp/: test_server.py
